--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.4",
+    "@types/multer": "^1.4.12",
+    "axios": "^1.7.9",
     "express": "^4.21.2",
     "jspdf": "^2.5.2",
+    "multer": "^1.4.5-lts.1",
+    "pdf2json": "^3.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
