--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^9.2.0",
     "react-select": "^5.10.0",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "tailwindcss": "^4.0.4"
   },
   "devDependencies": {
