--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.0.4",
     "@types/multer": "^1.4.12",
     "axios": "^1.7.9",
+    "cheerio": "^1.0.0",
     "express": "^4.21.2",
     "jspdf": "^2.5.2",
     "multer": "^1.4.5-lts.1",
@@ -28,7 +29,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
-    "@types/express": "^5.0.0",
+    "@types/express": "4.17.21",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
