--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "multer": "^1.4.5-lts.1",
     "pdf2json": "^3.1.5",
     "react": "^19.0.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-select": "^5.10.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
-    "tailwindcss": "^4.0.4"
+    "tailwindcss": "^4.0.4",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
