--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.21.2",
     "jspdf": "^2.5.2",
     "multer": "^1.4.5-lts.1",
+    "papaparse": "^5.5.2",
     "pdf2json": "^3.1.5",
     "react": "^19.0.0",
     "react-csv": "^2.2.2",
