--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@types/express": "4.17.21",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "^19.0.8",
+    "@types/react-csv": "^1.1.10",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.19.0",
