--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "typecheck": "tsc -b --noEmit",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest src/utils/index.test.ts"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
@@ -33,7 +34,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@testing-library/react": "^16.2.0",
     "@types/express": "4.17.21",
+    "@types/jest": "^29.5.14",
     "@types/papaparse": "^5.3.15",
     "@types/react": "^19.0.8",
     "@types/react-csv": "^1.1.10",
@@ -43,6 +46,8 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.6",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
     "vite": "^6.1.0"
