--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "test": "jest src/utils/index.test.ts"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
     "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.4",
     "@types/multer": "^1.4.12",
