--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "tailwindcss": "^4.0.4",
-    "uuid": "^11.0.5"
+    "uuid": "^11.0.5",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
