--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@types/multer": "^1.4.12",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jspdf": "^2.5.2",
     "multer": "^1.4.5-lts.1",
+    "openai": "^4.87.3",
     "papaparse": "^5.5.2",
     "pdf2json": "^3.1.5",
     "react": "^19.0.0",
