--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react-csv": "^2.2.2",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^7.4.1",
     "react-select": "^5.10.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
