add Rich Text component

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,11 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.4",
+    "@tiptap/extension-focus": "^2.11.7",
+    "@tiptap/extension-underline": "^2.11.7",
+    "@tiptap/pm": "^2.11.7",
+    "@tiptap/react": "^2.11.7",
+    "@tiptap/starter-kit": "^2.11.7",
     "@types/multer": "^1.4.12",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
