--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,9 +44,11 @@
     "react": "^19.0.0",
     "react-csv": "^2.2.2",
     "react-dom": "^19.0.0",
+    "react-is": "^19.1.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.1",
     "react-select": "^5.10.0",
+    "recharts": "^3.1.2",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "tailwindcss": "^4.0.4",
