--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,10 @@
     "preview": "vite preview",
     "test": "jest src/utils/index.test.ts",
     "format": "prettier --write .",
-    "prepare": "husky"
+    "prepare": "husky",
+    "changelog:patch": "node changelog.cjs patch",
+    "changelog:minor": "node changelog.cjs minor",
+    "changelog:major": "node changelog.cjs major"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -63,6 +66,7 @@
     "eslint": "^9.19.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
+    "generate-changelog": "^1.8.0",
     "globals": "^15.14.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
